Fixed the issue cards number not showing if the component not rendered

--- a/client/src/components/AddBook/FormAdd.scss
+++ b/client/src/components/AddBook/FormAdd.scss
@@ -12,7 +12,7 @@
   @include flexCenter(center);
 
   form {
-    background-color: pink;
+    background-color: #a7d2cb;
     height: 80vh;
     width: 50%;
     @include flexCenter(flex-start);
